# ai-pocket-core

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  error.rs  lib.rs  proto.rs  session.rs
crates/ffi/: Cargo.toml  build.rs  uniffi.toml
crates/ffi/src/: lib.rs
crates/transport/: Cargo.toml
crates/transport/src/: lib.rs
scripts/: gen-bindings.sh
